# TrainingSandbox

./: .gitmodules  CMakeLists.txt  DynamicItemLoader.qml  DynamicNodeLoader.qml  Main.qml  OriginGizmo.qml  README.md  ToolsView.qml  dynamicfileshelper.cpp  dynamicfileshelper.h  main.cpp  texturedatabaker.cpp  texturedatabaker.h
data/: test.qml
